--- a/.minos/config
+++ b/.minos/config
@@ -68,7 +68,7 @@ m-screencast         ffcast
 #minos.io/s
 dotfiles             https://github.com/chilicuil/dotfiles
 hook                 http://minos.io/hook
-app-core             mozilla-firefox mozilla-flashplayer
+app-core             curl
 app-desktop          mozilla-firefox mozilla-flashplayer
 #core,desktop?
 app-purge            xinetd sasl2-bin sendmail sendmail-base sendmail-bin sensible-mda rmail bsd-mailx apache2.2-common apache2 nano bind9 whoopsie
