update i3status.conf, yet another date format

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -47,7 +47,8 @@ run_watch vpn {
 }
 
 tztime local {
-        format = "%a %d %b %h:%m:%s"
+        #yet another date format ...
+        format = "%a %d %b %H:%M:%S"
 }
 
 load {
