tmux.conf: fix autorenamed function

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,20 +36,17 @@ set -g status-right '%H:%M %d-%b-%y'
 #=================================== Plugins ===================================
 #===============================================================================
 
-#modifing the current configuration so it initializes the tundle plugins in
-#background and keep a nice startup time
+#modify current configuration to initializes tundle plugins in background and
+#keep tmux fast
 
 #this is ugly but so it's tmux, on tmux 1.9 and later a new mode was added to
-#run-shell, if-shell, now they both run in foreground by default and add a -b
-#flag to get the old in background behavior, a better approach IMO would had
-#been to add the new behavior and assign it an optional flag but keep the old
-#behavior intact, anyway, progress...
+#run-shell/if-shell, now they both run in foreground by default and add a -b
+#flag to get the old in background behavior
 
-#add or remove a -b (background) flag in if-shell|run-shell commands
-#depending on the tmux version but avoid touching the first run-shell cmd so it
-#doesn't become accidentaly uncompatible with old tmux versions (1.6)
-
-run-shell "if [ $(tmux -V | tr -dC '0123456789') -ge 19 ]; then awk '/^[ \t]*run-shell[ \t]*\"/ { if (f == 1) gsub(/run-shell/,\"run-shell -b\"); f = 1 } {gsub(/^[ \t]*if-shell[ \t]*\"/,\"if-shell -b\"); print}' ~/.tmux.conf > ~/.tmux.conf.tmp; mv ~/.tmux.conf.tmp ~/.tmux.conf; else awk '{gsub(/^[ \t]*if-shell -b/,\"if-shell\"); gsub(/^[ \t]*run-shell -b/,\"run-shell\"); print}' ~/.tmux.conf > ~/.tmux.conf.tmp; mv ~/.tmux.conf.tmp ~/.tmux.conf; fi"
+#add or remove a -b (background) flag in if-shell/run-shell commands
+#depending on the tmux version detected but avoid touching the first cmd so it
+#doesn't become accidentaly uncompatible with old tmux versions (>= 1.6)
+run-shell "if [ \"$(tmux -V | tr -dC '0123456789')\" -ge 19 ]; then awk '/^[ \t]*run-shell[ \t]*\"/ {if (f == 1) gsub(/run-shell/,\"run-shell -b\");f=1} {gsub(/^[ \t]*if-shell[ \t]*\"/,\"if-shell -b \\\"\");print}' ~/.tmux.conf > ~/.tmux.conf.tmp; mv ~/.tmux.conf.tmp ~/.tmux.conf; else awk '{gsub(/^[ \t]*if-shell -b/,\"if-shell\");gsub(/^[ \t]*run-shell -b/,\"run-shell\");print}' ~/.tmux.conf > ~/.tmux.conf.tmp; mv ~/.tmux.conf.tmp ~/.tmux.conf; fi"
 
 #if tundle isn't around install it
 if-shell -b "sleep 0.2; test ! -f ~/.tmux/plugins/tundle/tundle" \
@@ -70,9 +67,9 @@ setenv -g @BUNDLE "gh:chilicuil/tundle-plugins/tmux-sensible"
 setenv -g @plugin "chilicuil/tundle-plugins/tmux-pain-control"
 
 setenv -g @PLUGIN "github:chilicuil/tundle-plugins/tmux-copycat"
-setenv -g @bundle "https://github.com/chilicuil/tundle-plugins/tmux-yank"
+setenv -g @bUnDlE "https://github.com/chilicuil/tundle-plugins/tmux-yank"
     setenv -g @shell_mode 'vi'
-setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-open"
+setenv -g @PlUgIn "gh:chilicuil/tundle-plugins/tmux-open"
 
 setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-resurrect"
 setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-continuum"
