--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,9 @@
 Host *
+    #default environment
+    SendEnv LANG LC_*
+    HashKnownHosts yes
+    GSSAPIAuthentication yes
+    GSSAPIDelegateCredentials no
     #connection sharing
     ControlMaster auto
     ControlPath /tmp/ssh_mux_%h_%p_%r
@@ -21,15 +26,6 @@ Host h*.javier.io
 
 Host *.javier.io msg.sh *.minos.io
     User admin
-
-Host buzz
-    Port 1003
-    #LocalCommand echo buzz
-    #PermitLocalCommand yes
-
-Host ccand.cc #hostgator
-    Port 2222
-    PubkeyAuthentication no
 
 Host bitbucket.org
     IdentityFile ~/.ssh/correo.io.id_rsa
