tmux|vim: update color settings, plus new plugins; vader.vim/vim-enmasse, experimental

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,14 +8,17 @@ set -g default-terminal  'rxvt-unicode-256color' # $TERM
 #set -g set-titles on
 #set -g set-titles-string '#(whoami)@#h[#(wget -q -O- http://ipecho.net/plain;echo)]'
 
-#setw -g aggressive-resize on #already set in tundle-plugins/tmux-sensible
-
+#TODO 10-08-2016 23:21 >> add to tundle-plugins/tmux-sensible
 #start windows and panes at 1, not 0, to match with vim, bspwm and i3
 set -g base-index      1
 set -g pane-base-index 1
+#renumber when window is closed
+set -g renumber-windows on
+#TODO 10-08-2016 23:21 >> add to tundle-plugins/tmux-sensible
 
-#set -g utf8 on          #already set in tundle-plugins/tmux-sensible
-#set -g status-utf8 on   #already set in tundle-plugins/tmux-sensible
+#setw -g aggressive-resize on #already set in tundle-plugins/tmux-sensible
+#set -g utf8 on               #already set in tundle-plugins/tmux-sensible
+#set -g status-utf8 on        #already set in tundle-plugins/tmux-sensible
 
 #monitoring
 setw -g monitor-activity on
@@ -27,6 +30,35 @@ bind _ command-prompt -p 'monitor-silence (seconds)' 'setw monitor-silence %%'
 #bind R in tundle-plugins/tmux-sensible
 bind-key r run-shell 'tmux source-file ~/.tmux.conf > /dev/null; \
                       tmux display-message "Sourced .tmux.conf!"'
+
+#TODO 10-08-2016 23:21 >> create tundle-plugins/tmux-colorize
+#TODO 10-08-2016 23:22 >> setenv -g @tmux-colorize 'default'
+#default statusbar colors
+set -g status-bg black
+set -g status-fg green
+set -g status-attr default
+#default window title colors
+setw -g window-status-fg white
+setw -g window-status-bg black
+#active window title colors
+setw -g window-status-current-fg yellow
+setw -g window-status-current-bg default
+setw -g window-status-current-attr dim
+#pane border
+set -g pane-border-fg white
+set -g pane-border-bg default
+set -g pane-active-border-fg white
+set -g pane-active-border-bg default
+#command line/message text
+set -g message-bg black
+set -g message-fg yellow
+#pane number display
+set -g display-panes-active-colour cyan
+set -g display-panes-colour brightblue
+#activity
+set-option -gw window-status-activity-attr dim
+set-option -gw window-status-activity-bg black
+set-option -gw window-status-activity-fg cyan
 
 set -g status-left-length 40
 set -g status-left  '#(hostname -f) :: [#S] '
