compton: add Xephyr to tiling less white list

--- a/.compton.conf
+++ b/.compton.conf
@@ -88,6 +88,7 @@ shadow-exclude = [
     "name *= 'i3'",
     "name *= 'dmenu'",
     "name *= 'Password Required'",
+    "class_g = 'Xephyr'",
     "class_g = 'Conky'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
