tmux: use renumber-windows only when supported, tmux >= 1.7

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ set -g default-terminal  'rxvt-unicode-256color' # $TERM
 set -g base-index      1
 set -g pane-base-index 1
 #renumber when window is closed
-set -g renumber-windows on
+if-shell "test \"$(tmux -V | tr -dC '0123456789')\" -ge 17" "set -g renumber-windows on"
 #TODO 10-08-2016 23:21 >> add to tundle-plugins/tmux-sensible
 
 #setw -g aggressive-resize on #already set in tundle-plugins/tmux-sensible
@@ -105,5 +105,6 @@ setenv -g @PlUgIn "gh:chilicuil/tundle-plugins/tmux-open"
 
 setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-resurrect"
 setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-continuum"
+    setenv -g @continuum-restore 'on'
 setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-logging"
 setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-sessionist"
