--- a/.gitconfig
+++ b/.gitconfig
@@ -60,3 +60,5 @@
    ;2. When using git pull on the master branch, with no remote and
       ;branch specified, use the default remote (origin) and merge in
       ;the changes from the master branch.
+[push]
+	default = matching
