--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,46 @@
 .yast*
 .zathura
 .zenmap
+.mutt/accounts/
+.Skype/
+.alsaplayer/
+.config/Kingsoft/
+.config/QtProject.conf
+.config/Skype/
+.config/Thunar/
+.config/dconf/
+.config/google-chrome/
+.config/gtk-2.0/
+.config/gtk-3.0/
+.config/hub
+.config/key-mon/
+.config/kingsoft/
+.config/menus/
+.config/mimeapps.list
+.config/spacefm/
+.config/spotify/
+.config/teamviewer/
+.config/xfce4/
+.cpan/
+.elinks/
+.genpass-cache
+.gopherrc
+.history
+.install4j
+.kingsoft/
+.local/
+.mailcap
+.mime.types
+.netbeans-derby/
+.netbeans/
+.oracle_jre_usage/
+.other/
+.p2/
+.soapuios/
+.sqldeveloper/
+.ssh/correo.io.id_rsa
+.ssh/correo.io.id_rsa.pub
+.ssh/deploy
+.ssh/deploy.pub
+.virtualbox/
+.wget-hsts
