slim.conf: force vt7 and default display in order to ease vnc connections

--- a/.slim.conf
+++ b/.slim.conf
@@ -2,7 +2,7 @@
 #Note: -xauth $authfile is automatically appended
 default_path        /bin:sbin/:/usr/bin:/usr/local/bin:/usr/bin/X11
 default_xserver     /usr/bin/X11/X
-xserver_arguments   -nolisten tcp
+xserver_arguments   :0 vt7 -nolisten tcp
 
 #Commands for halt, login, etc.
 halt_cmd            shutdown -h now
