s/chilicuil/javier-lopez/g

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,26 +69,26 @@ if-shell -b "sleep 0.2; test ! -f ~/.tmux/plugins/tundle/tundle" \
     "command-prompt -p 'Setting up tundle ... this may take a while ... wanna continue? (y/n):' \
     \"send-keys C-c; \
     run-shell 'if test %1 = y || test %1 = Y; then \
-        git clone --depth=1 https://github.com/chilicuil/tundle ~/.tmux/plugins/tundle/ >/dev/null 2>&1 && \
+        git clone --depth=1 https://github.com/javier-lopez/tundle ~/.tmux/plugins/tundle/ >/dev/null 2>&1 && \
         tmux source-file ~/.tmux.conf && sleep 0.2 && \
         sh ~/.tmux/plugins/tundle/scripts/install_plugins.sh; fi'\""
 
 run-shell -b "~/.tmux/plugins/tundle/tundle"
 
 #let tundle manage tundle, required!
-setenv -g @bundle "chilicuil/tundle"
+setenv -g @bundle "javier-lopez/tundle"
     setenv -g @verbose 'y'
 
-setenv -g @BUNDLE "gh:chilicuil/tundle-plugins/tmux-sensible"
-setenv -g @plugin "chilicuil/tundle-plugins/tmux-pain-control"
+setenv -g @BUNDLE "gh:javier-lopez/tundle-plugins/tmux-sensible"
+setenv -g @plugin "javier-lopez/tundle-plugins/tmux-pain-control"
 
-setenv -g @PLUGIN "github:chilicuil/tundle-plugins/tmux-copycat"
-setenv -g @bUnDlE "https://github.com/chilicuil/tundle-plugins/tmux-yank"
+setenv -g @PLUGIN "github:javier-lopez/tundle-plugins/tmux-copycat"
+setenv -g @bUnDlE "https://github.com/javier-lopez/tundle-plugins/tmux-yank"
     setenv -g @shell_mode 'vi'
-setenv -g @PlUgIn "gh:chilicuil/tundle-plugins/tmux-open"
+setenv -g @PlUgIn "gh:javier-lopez/tundle-plugins/tmux-open"
 
-setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-resurrect"
-setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-continuum"
+setenv -g @bundle "gh:javier-lopez/tundle-plugins/tmux-resurrect"
+setenv -g @bundle "gh:javier-lopez/tundle-plugins/tmux-continuum"
     setenv -g @continuum-restore 'on'
-setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-logging"
-setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-sessionist"
+setenv -g @bundle "gh:javier-lopez/tundle-plugins/tmux-logging"
+setenv -g @bundle "gh:javier-lopez/tundle-plugins/tmux-sessionist"
