--- a/.mpd.conf
+++ b/.mpd.conf
@@ -11,7 +11,7 @@
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-music_directory		"/home/javier/.b.javier.io/backup/sup.lan/root-home-chilicuil/data/music/"
+music_directory		"/home/javier/data/music/"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
 # directory is storage for playlists created by MPD. The server will use
