slim: update default user

--- a/.slim.conf
+++ b/.slim.conf
@@ -67,7 +67,7 @@ reboot_msg         Rebooting...
 
 #default user, leave blank or remove this line
 #for avoid pre-loading the username.
-default_user        chilicuil
+default_user        javier
 
 #Focus the password field on start when default_user is set
 #Set to "yes" to enable this feature
