update ssh default users per node

--- a/.ssh/config
+++ b/.ssh/config
@@ -20,11 +20,11 @@ Host *.pagekite.me
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
 
 Host h*.javier.io
-    User chilicuil
+    User javier
     CheckHostIP no
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
 
-Host *.javier.io msg.sh *.minos.io
+Host *.javier.io *.minos.io
     User admin
 
 Host bitbucket.org
