update autogenerated config files: Virtualbox, PcMan, QT

--- a/.config/pcmanfm/default/pcmanfm.conf
+++ b/.config/pcmanfm/default/pcmanfm.conf
@@ -1,29 +1,26 @@
 [config]
 bm_open_method=0
-su_cmd=gksu %s
 
 [volume]
 mount_on_startup=0
 mount_removable=0
 autorun=0
 
-[desktop]
-wallpaper_mode=0
-wallpaper=
-desktop_bg=#000000
-desktop_fg=#ffffff
-desktop_shadow=#000000
-desktop_font=Sans 12
-show_wm_menu=0
-
 [ui]
 always_show_tabs=0
 max_tab_chars=32
 win_width=1364
-win_height=746
-splitter_pos=125
-side_pane_mode=1
-view_mode=0
+win_height=733
+splitter_pos=114
+media_in_new_tab=0
+desktop_folder_new_win=0
+change_tab_on_drop=1
+close_on_unmount=1
+focus_previous=0
+side_pane_mode=places
+view_mode=icon
 show_hidden=0
-sort_type=0
-sort_by=2
+sort=name;ascending;
+toolbar=newtab;navigation;home;
+show_statusbar=1
+pathbar_mode_buttons=0
