tmux: add battery information to status-right

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,7 +46,8 @@ set-option -gw window-status-activity-fg cyan
 
 set -g status-left-length 40
 set -g status-left  '#(hostname -f) :: [#S] '
-set -g status-right '%H:%M %d-%b-%y'
+#https://github.com/javier-lopez/learn/blob/master/sh/tools/battery
+set -g status-right '#(battery -ts) %H:%M %d-%b-%y'
 
 #===============================================================================
 #=================================== Plugins ===================================
