--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,7 +47,7 @@ set-option -gw window-status-activity-fg cyan
 set -g status-left-length 40
 set -g status-left  '#(hostname -f) :: [#S] '
 #https://github.com/javier-lopez/learn/blob/master/sh/tools/battery
-set -g status-right '#(battery -ts) %H:%M %d-%b-%y'
+set -g status-right '#(battery -tsr) %H:%M %d-%b-%y'
 
 #===============================================================================
 #=================================== Plugins ===================================
