gitignore: ignore temporal dotfiles

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,13 @@
 
 #But ignore these
 .*.swp
+.3T/
 .AbiSuite
 .DownloadManager
 .ICEauthority
 .NERDTreeBookmarks
 .Prismatik
+.Skype/
 .VirtualBox
 .Xauthority
 .Xdefaults-theme-colorize
@@ -19,10 +21,15 @@
 ._noip-2.1.9-1
 .adobe
 .alien-arena
+.alsaplayer/
 .android
+.ansible/
+.aoe2/
 .aom-savegame/
+.aom/
 .appletviewer
 .arduino
+.aria2/
 .asadmin*
 .asoundrc*
 .aspell.*
@@ -42,23 +49,41 @@
 .checkbox
 .com.zerog.registry.xml
 .compiz
+.config/Kingsoft/
 .config/LightTable/
 .config/Popcorn-Time/
+.config/QtProject.conf
+.config/Skype/
+.config/Thunar/
 .config/VirtualBox
+.config/dconf/
 .config/feh/
+.config/google-chrome/
 .config/gpick/
+.config/gtk-2.0/
+.config/gtk-3.0/
 .config/htop/
+.config/hub
 .config/inkscape/
+.config/key-mon/
+.config/kingsoft/
+.config/menus/
+.config/mimeapps.list
 .config/mps/
+.config/spacefm/
+.config/spotify/
 .config/sublime-text-2/
 .config/sublime-text-3/
+.config/teamviewer/
 .config/terminology/
 .config/transmission/
 .config/umplayer/
 .config/vlc/
 .config/wesnoth/
 .config/xarchiver/
+.config/xfce4/
 .covers
+.cpan/
 .ctags
 .ctrlp_cache
 .cups
@@ -69,17 +94,20 @@
 .directory
 .dmenu_cache
 .dmrc
+.docker/
 .dreampie
 .dvdcss/
 .dynamag
 .e
 .easy_e17.conf*
+.elinks/
 .enna
 .esd_auth
 .et_patterns_remove
 .eternalize-data
 .exaile
 .exchange
+.expo/
 .fehbg
 .fehrc
 .festival_history
@@ -92,7 +120,9 @@
 .gconfd
 .gegl*
 .gem
+.genpass-cache
 .gerbview
+.getpass-kill-clipboard
 .gftp
 .ghc
 .ghttrack.cfg
@@ -109,16 +139,19 @@
 .gnupg/
 .golly
 .goobook_cache
+.gopherrc
 .grdc
 .gstreamer-0.10
 .gtk-bookmarks
 .gtk-recordmydesktop
 .gtkpod
+.history
 .httrack.ini
 .i3/logfile
 .icedtea/
 .icedteaplugin
 .icons
+.install4j
 .irssi.logs
 .irssi/away.log
 .irssi/config.autosave
@@ -128,7 +161,10 @@
 .jigl
 .jmol
 .kchmviewer
+.kde/
 .kicad
+.kingsoft/
+.kube/
 .last_backup
 .lastpass
 .launchpadlib
@@ -138,16 +174,20 @@
 .links2
 .linphone*
 .linterweb
+.local/
 .lyrics
 .lyx
 .m2
 .macromedia
 .magnifier.ini
+.mailcap
 .matplotlib
 .mc
 .mcop*
 .mcore
 .meysnail.tb.js
+.mime.types
+.minetest/
 .mixxx
 .mono
 .movietime-suspend-inhibit
@@ -157,6 +197,7 @@
 .mp3blaster
 .msf*
 .mtpaint
+.mutt/accounts/
 .mutt/cache/
 .mutt/certificates
 .mysql*
@@ -165,6 +206,8 @@
 .ncmpcpp/error.log
 .neocomplcache
 .neocon
+.netbeans-derby/
+.netbeans/
 .netx*
 .newsbeuter
 .nexuiz
@@ -174,9 +217,14 @@
 .openarena
 .opendict
 .openoffice.org
+.oracle_jre_usage/
+.other/
+.p2/
 .packages.list
+.packer.d/
 .pan2
 .pentadac*
+.pex/
 .pgadmin3
 .pgpass
 .pianocat/
@@ -189,6 +237,7 @@
 .pulse/
 .purple
 .pyhistory
+.python_history
 .pythonbrew/
 .qemu-launcher
 .qf
@@ -212,7 +261,13 @@
 .sjeng
 .sjphone
 .skel
+.soapuios/
+.sqldeveloper/
 .ssh/authorized_keys
+.ssh/correo.io.id_rsa
+.ssh/correo.io.id_rsa.pub
+.ssh/deploy
+.ssh/deploy.pub
 .ssh/id*
 .ssh/known_hosts
 .ssh/known_hosts.old
@@ -227,6 +282,7 @@
 .tdrc
 .teamviewer
 .terminfo
+.terraform.d/
 .tetris*
 .texmf-var
 .themes
@@ -248,12 +304,16 @@
 .viminf*
 .vimperator/info
 .virtaal/tm.db
+.virtualbox/
 .vlc
 .vnc/
+.vscode/
 .w3m
+.warcraft3
 .warcraft3-savegame/
 .wcd
 .wesnoth*
+.wget-hsts
 .whoami
 .wine
 .wireshark
@@ -278,46 +338,3 @@
 .yast*
 .zathura
 .zenmap
-.mutt/accounts/
-.Skype/
-.alsaplayer/
-.config/Kingsoft/
-.config/QtProject.conf
-.config/Skype/
-.config/Thunar/
-.config/dconf/
-.config/google-chrome/
-.config/gtk-2.0/
-.config/gtk-3.0/
-.config/hub
-.config/key-mon/
-.config/kingsoft/
-.config/menus/
-.config/mimeapps.list
-.config/spacefm/
-.config/spotify/
-.config/teamviewer/
-.config/xfce4/
-.cpan/
-.elinks/
-.genpass-cache
-.gopherrc
-.history
-.install4j
-.kingsoft/
-.local/
-.mailcap
-.mime.types
-.netbeans-derby/
-.netbeans/
-.oracle_jre_usage/
-.other/
-.p2/
-.soapuios/
-.sqldeveloper/
-.ssh/correo.io.id_rsa
-.ssh/correo.io.id_rsa.pub
-.ssh/deploy
-.ssh/deploy.pub
-.virtualbox/
-.wget-hsts
