add solucion-it ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -29,3 +29,7 @@ Host *.javier.io *.minos.io
 
 Host bitbucket.org
     IdentityFile ~/.ssh/correo.io.id_rsa
+
+Host *.solucion-it.com solucion-it.com
+    User root
+    Port 2324
