rm unused hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -30,6 +30,8 @@ Host *.javier.io *.minos.io
 Host bitbucket.org
     IdentityFile ~/.ssh/correo.io.id_rsa
 
-Host *.solucion-it.com solucion-it.com
-    User root
-    Port 2324
+#Host peli.me
+    #ProxyCommand nc -x 127.0.0.1:9150 %h %p
+
+#Host espotifai.com
+    #ProxyCommand nc -x 127.0.0.1:9150 %h %p
