ssh: add default user for nebulosa.io based projects

--- a/.ssh/config
+++ b/.ssh/config
@@ -24,7 +24,7 @@ Host h*.javier.io
     CheckHostIP no
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
 
-Host *.javier.io *.minos.io
+Host *.javier.io *.minos.io *.nebulosa.io
     User admin
 
 Host bitbucket.org
